--- a/prot.css
+++ b/prot.css
@@ -4,7 +4,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 */
 /*
     Created on : 22/09/2022, 12:58:49
-    Author     : Ederson
+    Author     : Ederson Morais
 */
 
 .edit th, th[style*=NO-RAD] {
